Stream FileQCs, and bug fixes (#29)
* GR-645 Add FileQC stream endpoint

* fix qcstatus pending -> false bug

* return either fileqcs or errors, not both
