# swagger.json
@@ -78,15 +78,15 @@
         ],
         "responses": {
           "200": {
-            "description": "A list of FileQCs",
+            "description": "A list of FileQCs sorted by file SWIDs",
             "schema": {
-              "$ref": "#/definitions/FileQCs-response-with-errors"
+              "$ref": "#/definitions/FileQCs-response"
             }
           },
           "404": {
             "description": "No files found for given project or file SWIDs",
             "schema": {
-              "$ref": "#/definitions/Errors-response"
+              "$ref": "#/definitions/Errors"
             }
           }
         }
@@ -105,7 +105,7 @@
           {
             "name": "qcstatus",
             "in": "query",
-            "description": "PASS or FAIL (PENDING not permitted)",
+            "description": "PASS or FAIL or PENDING",
             "type": "string",
             "required": true
           },
@@ -119,7 +119,7 @@
           {
             "name": "comment",
             "in": "query",
-            "description": "URL-escaped reason why FileQC is PASS or FAIL (optional)",
+            "description": "URL-escaped comment about QC status (optional)",
             "type": "string",
             "required": false
           }
@@ -128,13 +128,30 @@
           "201": {
             "description": "FileQC successfully created",
             "schema": {
-              "$ref": "#/definitions/FileQC-SWID-SWAs-with-errors"
+              "$ref": "#/definitions/FileQC-response"
             }
           },
           "400": {
             "description": "FileQC was not created",
             "schema": {
-              "$ref": "#/definitions/Errors-response"
+              "$ref": "#/definitions/Errors"
+            }
+          }
+        }
+      }
+    },
+    "/fileqcs-only": {
+      "get": {
+        "summary": "Get a stream of all FileQCs",
+        "description": "Returns an unordered stream of all FileQCs in the database",
+        "responses": {
+          "200": {
+            "description": "A stream of all FileQCs",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/FileQCs-only-response"
+              }
             }
           }
         }
@@ -143,7 +160,7 @@
     "/fileqc/{fileswid}": {
       "get": {
         "summary": "Get one or all FileQCs for the given file SWID",
-        "description": "Returns either the most recent or all FileQC for the given file SWID",
+        "description": "Returns either the most recent or all FileQCs for the given file SWID (sorted by QC date) for the given file SWID",
         "parameters": [
           {
             "name": "fileswid",
@@ -164,7 +181,7 @@
           "200": {
             "description": "A FileQC",
             "schema": {
-              "$ref": "#/definitions/FileQC-response-with-errors"
+              "$ref": "#/definitions/FileQC-response"
             }
           }
         }
@@ -187,9 +204,9 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully created FileQCs",
+            "description": "Successfully created FileQCs, ordered by file SWID",
             "schema": {
-              "$ref": "#/definitions/FileQCs-response-with-errors"
+              "$ref": "#/definitions/FileQCs-response"
             }
           },
           "400": {
@@ -219,7 +236,22 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully deleted at least some FileQCs (but not necessarily all)"
+            "description": "Successfully deleted at least some FileQCs (but not necessarily all)",
+            "type": "object",
+            "properties": {
+              "success": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Failed to delete any FileQCs",
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            }
           }
         }
       }
@@ -227,23 +259,24 @@
   },
   "definitions": {
     "Errors": {
-      "type": "array",
-      "items": {
-        "type": "string"
-      }
-    },
-    "Errors-response": {
-      "description": "Explanation of why operation failed",
       "type": "object",
       "properties": {
         "errors": {
-          "$ref": "#/definitions/Errors"
+          "description": "List of errors",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
     "FileQC-response": {
       "type": "object",
       "properties": {
+        "fileqcid": {
+          "description": "Unique FileQC ID",
+          "type": "integer"
+        },
         "fileswid": {
           "description": "File SWID",
           "type": "integer"
@@ -289,60 +322,51 @@
         }
       }
     },
-    "FileQC-response-with-errors": {
-      "type": "object",
-      "properties": {
-        "fileqc": {
-          "$ref": "#/definitions/FileQC-response"
-        },
-        "errors": {
-          "$ref": "#/definitions/Errors"
-        }
-      }
-    },
-    "FileQCs-response-with-errors": {
+    "FileQCs-response": {
       "type": "object",
       "properties": {
         "fileqcs": {
-          "$ref": "#/definitions/FileQCs-response"
-        },
-        "errors": {
-          "$ref": "#/definitions/Errors"
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/FileQC-response"
+          }
         }
       }
     },
-    "FileQCs-response": {
+    "FileQCs-only-response": {
       "type": "array",
       "items": {
-        "$ref": "#/definitions/FileQC-response"
-      }
-    },
-    "FileQC-SWID-SWAs-with-errors": {
-      "type": "object",
-      "properties": {
-        "fileqc": {
-          "description": "FileQC",
-          "type": "object",
-          "properties": {
-            "fileswid": {
-              "description": "File SWID",
-              "type": "integer"
-            },
-            "upstream": {
-              "description": "Upstream input file SWAs",
-              "type": "array",
-              "items": {
-                "type": "integer"
-              }
-            }
-          }
+        "fileqcid": {
+          "description": "Unique FileQC ID",
+          "type": "integer"
         },
-        "errors": {
-          "description": "Empty array of errors",
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
+        "fileswid": {
+          "description": "File SWID",
+          "type": "integer"
+        },
+        "filepath": {
+          "description": "File Path",
+          "type": "string"
+        },
+        "qcstatus": {
+          "description": "FileQC status (PASS, FAIL, PENDING)",
+          "type": "string"
+        },
+        "username": {
+          "description": "Name of person QCing the file",
+          "type": "string"
+        },
+        "comment": {
+          "description": "Further information about the QC status",
+          "type": "string"
+        },
+        "project": {
+          "description": "Project name",
+          "type": "string"
+        },
+        "qcdate": {
+          "description": "QC Date",
+          "type": "string"
         }
       }
     },
@@ -359,7 +383,7 @@
                 "type": "integer"
               },
               "qcstatus": {
-                "description": "PASS or FAIL (PENDING not permitted)",
+                "description": "PASS or FAIL or PENDING",
                 "type": "string"
               },
               "username": {
